<resources>
    <string name="app_name">HabitTrainer</string>
    <string name="habit_icon">Habit Icon</string>
    <string name="drink_water_description">A refreshing glass of water gets you hydrated</string>
    <string name="drink_water_title">Drink Water</string>
    <string name="begin_habit">Begin new habit…</string>
    <string name="eat_an_apple">Eat an apple</string>
    <string name="eat_apple_description">An apple a day keeps the doctor away.</string>
    <string name="choose_image">Choose image…</string>
    <string name="selected_image">Selected Image</string>
    <string name="save">Save</string>
    <string name="choose_habit_image">Choose image for habit</string>
</resources>
